feat: Implement enhanced authorization with time-bound access and multi-approver workflows, updating catalog nodes and access requests.